--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,6 @@ authors = ["Bryan Gilbraith <gilbraith.bryan@gmail.com>"]
 
 [dependencies]
 tokio = "0.1"
+tokio-io = "0.1"
+futures = "0.1"
+bytes = "0.4"
